/*
 * Copyright (C) 2015 Red Hat, Inc.
 *
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

package flow;

message Flow {
	required string UUID 		= 1;
	required string LayersPath 	= 2;
	required string EtherSrc 	= 3;
	required string EtherDst 	= 4;
	optional string Ipv4Src 	= 5;
	optional string Ipv4Dst 	= 6;
	optional uint32 PortSrc 	= 7;
	optional uint32 PortDst 	= 8;
	optional uint64 ID 			= 9;
	required uint64 Timestamp 	= 10;

	message ProbeMappingAttributes {
		required string ProbePath = 1;
		optional string IfSrcPath = 2;
		optional string IfDstPath = 3;
	}

	required ProbeMappingAttributes ProbeAttributes = 11;

	message InterfaceAttributes {
		optional string Host			= 1;
		optional string TenantID 		= 2;
		optional uint64 VNI 			= 3;
	}

	message IfMappingAttributes {
		optional InterfaceAttributes IfAttrsSrc = 1;
		optional InterfaceAttributes IfAttrsDst = 2;
	}

	optional IfMappingAttributes IfAttributes = 12;
}